[build-system]
requires = ["flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "iou"
authors = [
    { name = "Alexander Wellbrock", email = "a.wellbrock@mailbox.org" },
    { name = "Victor Schümmer", email = "notourserver+dev@posteo.net" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.9,<2.0",
    "fastapi[all]>=0.74,<1.0",
    "uvicorn>=0.17,<1.0",
    "tomli>=2.0,<3.0",
    "sqlalchemy[asyncio]>=1.4,<2.0",
    "alembic>=1.7,<2.0",
]

dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "types-sqlalchemy>=1.4,<2.0",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mock",
    "httpx",
    "pylint",
    "pylint_fixme_info",
    "flake8", # another linter
    "isort", # import sorting
    "black", # formatter
    "mypy", # our static type checker
    "twine", # uploads stuff to pypi repos (i.e. gitlab)
    "build", # build-frontend that produces sdist and wheel
    "pre-commit", # Trigger lint before commiting
]

[project.urls]
Home = "https://git.notourserver.de/iou/server"

[project.scripts]
iou = "iou:run"

[tool.flit.sdist]
# we manually need to include test dirs, recursive globs not supported
# and including the /test dir also picks up .pyc files :(
include = [
    "test/*.py",
]

[tool.setuptools_scm]
write_to = "iou/_version.py"
write_to_template = "VERSION = '{version}'\n"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
namespace_packages = true
exclude = [".venv"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
warn_unreachable = true
strict_equality = true
disallow_subclassing_any = true
no_implicit_reexport = true
disallow_untyped_calls = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "--strict-markers"
asyncio_mode = "auto"
filterwarnings = []
markers = []

[tool.ruff]
line-length = 120
ignore = ["E402", "F401"]
